--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,29 @@ Blue = #687DA2
 Light = #E2E299
 Greyish = #999B9D
 */
+
+/*
+Fonts::
+Asap = for BIG BIG text
+Ubuntu = for BIG text
+Palanquin = for text
+*/
+
+@font-face {
+    font-family: Asap;
+    src: url('../fonts/Asap-Regular.ttf')
+}
+
+@font-face {
+    font-family: Palanquin;
+    src: url('../fonts/Palanquin-Regular.ttf')
+}
+
+@font-face {
+    font-family: Ubuntu;
+    src: url('../fonts/Ubuntu-Regular.ttf')
+}
+
 html {
     height: 100%;
 }
@@ -18,58 +41,101 @@ img {
 
 header {
     grid-area: header;
-    /* background-color: #ffa08c; */
     display: grid;
     grid-template-rows: 55% auto;
 }
 
-header > img {
+header>img {
     grid-row: 1;
 }
 
-header > nav {
+header>nav {
     grid-row: 2;
+    background-color: #C6A85F;
 }
 
-header > nav > ul {
-    margin: 0;
+header>nav>ul {
     list-style: none;
     display: grid;
     grid-template-columns: auto auto auto auto auto;
-    justify-content: space-around;
-    padding: 0;
+    justify-items: center;
+    align-items: center;
 }
 
-header > nav > ul > li {
-
-    background-color: #4CAF50; /* Green */
-    color: white;
-}
-
-header > nav > ul > li > a {
-    text-decoration: none;
-    color:black
+header>nav>ul>li {
+    background-color: black;
+    margin-right: 30px;
+    width: 150px;
+    line-height: 60px;
     text-align: center;
-    padding: 5em;
 }
 
-header > nav > ul > li#signin {
+header>nav>ul>li>a {
+    text-decoration: none;
+    color: white;
+    display: block;
+    font-family: Asap;
+    font-weight: bolder;
+}
+
+header>nav>ul>li>a:hover {
+    text-decoration: none;
+    color: white;
+    display: block;
+    background-color: #CB5E56;
+}
+
+header>nav>ul>li#signin {
     grid-column: 5;
 }
 
 main {
     grid-area: main;
-    background-color: #ffff64;
+    background-color: #E2E299;
 }
 
 aside {
     grid-area: sidebar;
-    background-color: #8ca0ff;
+    background-color: #687DA2;
+    display: grid;
+    grid-template-rows: auto 10%;
+}
+
+aside button {
+    grid-row: 2;
+    background-color: black;
+    color: white;
+    border: none;
+    font-family: Asap;
+    font-weight: bolder;
+}
+
+aside button:hover {
+    background-color: #CB5E56;
+}
+
+aside button:focus {
+    outline: none;
 }
 
 footer {
     grid-area: footer;
-    background-color: #8cffa0;
+    background-color: #caab60;
+    text-align: center;
+    text-decoration: none;
+    display: grid;
+}
+
+footer a {
+    text-decoration: none;
+    font-family: Palanquin;
+    font-size: small;
+    color: black;
+}
+
+p {
+    font-family: Palanquin;
+    margin: 0;
 }
 
 body {
@@ -77,13 +143,7 @@ body {
     margin: 0;
     width: 100%;
     height: 100%;
-    grid-template-rows: 25% auto 10%;
+    grid-template-rows: 25% auto minmax(5%, 6%);
     grid-template-columns: auto auto auto 10%;
-    grid-template-areas:
-        "header header header header"
-        "main main main sidebar"
-        "footer footer footer footer";
+    grid-template-areas: "header header header header" "main main main sidebar" "footer footer footer footer";
 }
-
-
-
