--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ aside {
     grid-area: sidebar;
     background-color: #687DA2;
     display: grid;
-    grid-template-rows: auto 10%;
+    grid-template-rows: auto min-content;
 }
 
 aside button {
@@ -143,7 +143,15 @@ body {
     margin: 0;
     width: 100%;
     height: 100%;
-    grid-template-rows: 25% auto minmax(5%, 6%);
-    grid-template-columns: auto auto auto 10%;
+    grid-template-rows: 25% auto minmax(5%, 7%);
+    grid-template-columns: auto auto auto 15%;
     grid-template-areas: "header header header header" "main main main sidebar" "footer footer footer footer";
+}
+
+@media screen and (max-width: 768px) {
+    body {
+        grid-template-rows: 25% auto 10% minmax(5%, 7%);
+        grid-template-columns: auto auto auto auto;
+        grid-template-areas: "header header header header" "main main main main" "sidebar sidebar sidebar sidebar" "footer footer footer footer";
+    }
 }
