--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,7 @@ Palanquin = for text
 
 html {
     height: 100%;
+    background-color: #E2E299;
 }
 
 img {
@@ -45,23 +46,24 @@ header {
     grid-template-rows: 55% auto;
 }
 
-header div#logo {
+header > div#logo {
     background-color: #181A1B;
 }
 
-header img {
+header > img {
     grid-row: 1;
 }
 
-header nav {
+header > nav {
     grid-row: 2;
     background-color: #C6A85F;
 }
 
-header nav ul {
+header > nav > ul {
     list-style: none;
     display: grid;
     grid-template-columns: auto auto auto auto auto;
+    grid-template-rows: auto;
     justify-items: center;
     align-items: center;
     padding: 0;
@@ -69,7 +71,7 @@ header nav ul {
     height: 100%;
 }
 
-header nav ul li {
+header > nav > ul > li {
     background-color: black;
     margin-right: 30px;
     width: 150px;
@@ -77,7 +79,7 @@ header nav ul li {
     text-align: center;
 }
 
-header nav ul li a {
+header > nav > ul > li > a {
     text-decoration: none;
     color: white;
     display: block;
@@ -86,15 +88,19 @@ header nav ul li a {
     transition: 0.2s;
 }
 
-header nav ul li a:hover {
+header > nav > ul > li > a:hover {
     text-decoration: none;
     color: white;
     display: block;
     background-color: #CB5E56;
 }
 
-header nav ul li#signin {
+header > nav > ul > li#signin {
     grid-column: 5;
+}
+
+header > nav > ul > h1 {
+    grid-column: 3;
 }
 
 main {
@@ -104,6 +110,12 @@ main {
     justify-items: center;
     align-items: center;
     grid-template-rows: auto min-content;
+    animation: fadein 0.5s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 
 main button {
@@ -183,6 +195,63 @@ body {
     grid-template-rows: 25% auto minmax(5%, 7%);
     grid-template-columns: auto auto auto 15%;
     grid-template-areas: "header header header header" "main main main sidebar" "footer footer footer footer";
+}
+
+body#login {
+    display: grid;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    grid-template-rows: 25% auto minmax(5%, 7%);
+    grid-template-columns: auto auto auto 15%;
+    grid-template-areas: "header header header header" "main main main main" "footer footer footer footer";
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    height: 35%;
+    width: 25%;
+    justify-content: center;
+    gap: 5px;
+    font-family: Palanquin;
+    border: 3px solid black;
+    padding: 10px;
+}
+
+form > * {
+    display: flex;
+    flex-direction: column;
+}
+
+form input[type=text], input[type=password] {
+    padding: 12px 20px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+form > div#submit {
+    width: 100%;
+    margin-top: auto;
+    height: 20%
+}
+
+div#submit > input {
+    background-color: black;
+    color: white;
+    border: none;
+    font-family: Asap;
+    font-weight: bolder;
+    transition: 0.2s;
+    height: 100%;
+}
+
+div#submit > input:hover {
+    background-color: #CB5E56;
+}
+
+div#submit > input:focus {
+    outline: none;
 }
 
 #allBeverages {
