--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,10 +199,10 @@ body {
 .beverage-container {
     display: flex;
     justify-content: center;
-    margin: 20px;
-    width: 200px;
-    height: 100px;
-    box-shadow: 0px 3px 5px #d6d0d0;
+    margin: 25px;
+    width: 150px;
+    height: 90px;
+    box-shadow: 0px 3px 5px #000000;
 }
 
 .beverage-name {
