--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,12 +166,12 @@ Palanquin = for text
      grid-area: sidebar;
      background-color: #687DA2;
      display: grid;
-     grid-template-rows: auto 5%;
+     grid-template-rows: auto 5% 5%;
      box-shadow: inset 3px 0 15px 0px rgb(0 0 0 / 60%);
  }
 
  aside button {
-     grid-row: 2;
+     grid-row: 3;
  }
 
  footer {
