--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,21 +108,29 @@ Palanquin = for text
      transition: 0.2s;
  }
 
- header nav li a:hover {
+ nav li a:hover {
      text-decoration: none;
      color: white;
      display: block;
      background-color: #CB5E56;
  }
 
- header nav li#signin {
+ nav li#signin {
      grid-column: 5;
  }
 
- header nav h1 {
-     grid-column: 3;
+ nav h1 {
      margin: auto;
      font-family: Palanquin;
+ }
+
+ h1#current-user-table {
+     grid-column: 3;
+ }
+
+ h1#current-user-privilage {
+     grid-column: 5;
+     font-family: Ubuntu;
  }
 
  main {
@@ -346,8 +354,12 @@ Palanquin = for text
 
  .beverage-country-name {
      font-family: Asap;
-     flex: 1 1 90%;
+     flex: 1 1 70%;
      margin-left: 1%;
+ }
+
+ .beverage-available {
+     flex: 1 1 20%;
  }
 
  .beverage-to-list {
